[tool.poetry]
name = "trapper-backend"
version = "1.0.0"
description = "Backend API server for Trapper project"
authors = ["Howard TP055278 <howardlim06@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"
sqlmodel = "^0.0.8"
pyjwt = "^2.7.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
alembic = "^1.11.1"
mariadb = "^1.1.6"
aiomysql = "^0.2.0"
pydantic = {extras = ["email"], version = "^1.10.9"}
python-multipart = "^0.0.6"
celery = "^5.3.1"
fuzzywuzzy = "^0.18.0"
requests = "^2.31.0"
python-slugify = "^8.0.1"
pycryptodome = "^3.18.0"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
